# Options_Pricing

./: README.md  requirements.txt  run.sh  run_demo.sh
api/: realtime_monitor.py
cpp_accelerators/: CMakeLists.txt  Makefile  QUICKSTART.md  README.md  build.sh  heston_bindings.cpp  heston_pricer.hpp  sabr_bindings.cpp  sabr_pricer.hpp  setup.py  test_cpp_modules.py
data/: __init__.py  data_preprocessing.py  market_data.py  market_data_loader.py  sample_generators.py
data/bitcoin/: __init__.py  bitcoin_data_fetcher.py  bitcoin_model_comparison.py  requirements_bitcoin.txt  run_bitcoin_comparison.sh
evaluation_modules/: __init__.py  bitcoin_trading_evaluation.py  model_validation.py  performance_metrics.py  realtime_monitor.py  statistical_tests.py  trading_backtest.py  visualization.py
examples/: CALIBRATION_NOTES.md  DEMO_EXPLANATION.md  IMPROVEMENTS_GUIDE.md  MIXTURE_MARKET_ANALYSIS.md  MULTI_AGENT_PERFORMANCE_REPORT.md  README.md  REVERSE_ANALYSIS.md  agent_physical_integration_demo.py  bitcoin_trading_demo.py  complete_integration_demo.py  enhanced_evaluation_demo.py  final_pnl_comparison.py  forecast_enhanced_option_pricing_demo.py  integrated_portfolio_optimization_demo.py  integrated_risk_trading_demo.py  monte_carlo_arbitrage_demo.py  multi_agent_rl_training_demo.py  multi_agent_vs_traditional_demo.py  options_pricing_demo.py  pure_vs_behavior_timeseries_comparison.py  timeseries_multiagent_comparison_demo.py  validated_integrated_demo.py  validated_multi_agent_demo.py  validation_demo.py  volatility_arbitrage_demo.py
models/: __init__.py
models/environment/: __init__.py  trading_environment.py
models/evaluation/: volatility_evaluation.py
models/multi_agent/: __init__.py  multi_agent_analysis_data.csv  multi_agent_analysis_results.json  timeseries_driven_agents.py  ts_market_environment.py
models/optimization_methods/: __init__.py  option_portfolio.py
models/options_pricing/: __init__.py  base_model.py  binomial_tree.py  black_scholes.py  dual_convergence_pricer.py  dynamic_hedge_engine.py  heston.py  implied_volatility.py  local_volatility.py  model_calibrator.py  sabr.py  volatility_arbitrage.py
models/portfolio_construction/: __init__.py  (+1 more)
monitoring/: reporting.py
reports/: adaptive_training_report.json
risk/: __init__.py  bitcoin_risk_controller.py  cvar_models.py  delta_hedging.py  integrated_risk.py  option_risk.py  portfolio_risk.py  risk_measures.py  var_models.py
rust_monte_carlo/: Cargo.toml  README.md  build.sh  pyproject.toml
rust_monte_carlo/examples/: basic_validation.py
rust_monte_carlo/monte_carlo_rust/: __init__.py
rust_monte_carlo/monte_carlo_validator-0.1.0.dist-info/: METADATA  RECORD
rust_monte_carlo/src/: lib.rs  models.rs  monte_carlo.rs  statistics.rs
rust_monte_carlo/tests/: test_monte_carlo.py
theory/: Detailed_Methods.md  Theoretical_Framework.md
time_series_forecasting/: __init__.py  behavior_features.py  forecast_comparator.py  forecast_interface.py
validation/: rust_interface.py
validation/rust_engine/: Cargo.toml  README.md  build.sh
validation/rust_engine/python/: __init__.py  monte_carlo_validator.py
validation/rust_engine/src/: lib.rs
(+37 files in other folders)
