[package]
name = "monte_carlo_validator"
version = "0.1.0"
edition = "2021"
authors = ["Options Pricing Team"]
description = "High-performance Monte Carlo validation for multi-agent option pricing"

[lib]
name = "monte_carlo_rust"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Parallel computing
rayon = "1.8"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Linear algebra
ndarray = "0.15"
ndarray-rand = "0.14"

# Statistics
statrs = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
