[package]
name = "volatility_validator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.7"
statrs = "0.16"

[[bin]]
name = "volatility_validator"
path = "src/bin/volatility_validator.rs"

[lib]
name = "monte_carlo_engine"
path = "src/lib.rs"
